--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,10 +1,7 @@
 <!-- Page Content -->
-<div class="container-fluid"> 
-
-    <h1 class="mt-4" style="text-align: center;background-color: #bda05d;color:#fff;">Welcome to Bhilwara infotech Pvt Ltd.</h1>
-
-
-
+<div class="container-fluid">
+  <div class="row">
+    <h1 class="col-md-12"  style="widht:100%;text-align: center;background-color: #bda05d;color:#fff;">Welcome to Bhilwara infotech Pvt Ltd.</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -45,7 +42,7 @@
       </div>
 
 
-
+    </div>
 
  
 
