--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <!-- Page Content -->
-<div class="container register-form">
+<div class="container register-form" style="background-color:#f7f7f7;">
     <div class="form">
         <div class="note">
             <h4>Welcome to Bhilwara infotech, Login in here</h4>
