--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -1,9 +1,10 @@
 <!-- Page Content -->
 <div class="container-fluid" style="background-color: #f7f7f7;">
-    <h1>Home</h1>
+  <br>
+     <a class="btn btn-md btn-warning" style="font-size:30px; color:#fff;"><i class="fa fa-home"></i> Home </a> 
     <h5 class="mt-4">Logged out</h5>
     <p>Thank you for spending some quality time with the website today.</p>
-      <a href="login" class="btn btn-md btn-warning"> <i class="fa fa-sign-in"></i> Login Again</a>
-  
+      <a href="login" class="btn btn-md btn-success" style="color:#fff;"> <i class="fa fa-sign-in"></i> Login Again</a>
+    <br><br>
   </div>
   <!-- /.container -->
